# QLoRA-Finetuning

./: .gitignore  chat_with_model.py  check_data.py  pyproject.toml  train_with_gemma3.py  train_with_gpt2.py
gemma-3-270m-fine-tuned/: adapter_model.safetensors
gemma-3-270m-fine-tuned/checkpoint-3000/: adapter_model.safetensors  scheduler.pt  trainer_state.json
gemma-3-270m-fine-tuned/checkpoint-3250/: scheduler.pt  trainer_state.json
gemma-3-270m-fine-tuned/checkpoint-3378/: adapter_config.json  adapter_model.safetensors  scheduler.pt  trainer_state.json
gpt2-medium-fine-tuned/checkpoint-1250/: scheduler.pt  trainer_state.json
gpt2-medium-fine-tuned/checkpoint-1500/: scheduler.pt  trainer_state.json
gpt2-medium-fine-tuned/checkpoint-1690/: adapter_config.json  scheduler.pt  trainer_state.json
